libs/ui/dialogs/kis_dlg_preferences.cc
@@ -1632,6 +1632,8 @@ void PerformanceTab::slotFrameClonesLimitChanged(int value)
 #include <QOpenGLContext>
 #include <QScreen>
 
+namespace {
+
 QString colorSpaceString(KisSurfaceColorSpace cs, int depth)
 {
     const QString csString =
@@ -1659,6 +1661,22 @@ KisConfig::RootSurfaceFormat indexToFormat(int value)
            value == 2 ? KisConfig::BT709_G10 :
            KisConfig::BT709_G22;
 }
+
+int assistantDrawModeToIndex(KisConfig::AssistantsDrawMode mode)
+{
+    return mode == KisConfig::ASSISTANTS_DRAW_MODE_PIXMAP_CACHE ? 1 :
+           mode == KisConfig::ASSISTANTS_DRAW_MODE_LARGE_PIXMAP_CACHE ? 2 :
+           0;
+}
+
+KisConfig::AssistantsDrawMode indexToAssistantDrawMode(int value)
+{
+    return value == 1 ? KisConfig::ASSISTANTS_DRAW_MODE_PIXMAP_CACHE :
+           value == 2 ? KisConfig::ASSISTANTS_DRAW_MODE_LARGE_PIXMAP_CACHE :
+           KisConfig::ASSISTANTS_DRAW_MODE_DEFAULT;
+}
+
+} // anonymous namespace
 
 DisplaySettingsTab::DisplaySettingsTab(QWidget *parent, const char *name)
     : WdgDisplaySettings(parent, name)
@@ -1732,16 +1750,15 @@ DisplaySettingsTab::DisplaySettingsTab(QWidget *parent, const char *name)
         grpOpenGL->setEnabled(false);
         grpOpenGL->setChecked(false);
         chkUseTextureBuffer->setEnabled(false);
-        chkLargePixmapCache->setEnabled(false);
+        cmbAssistantsDrawMode->setEnabled(false);
         cmbFilterMode->setEnabled(false);
     } else {
         grpOpenGL->setEnabled(true);
         grpOpenGL->setChecked(cfg.useOpenGL());
         chkUseTextureBuffer->setEnabled(cfg.useOpenGL());
         chkUseTextureBuffer->setChecked(cfg.useOpenGLTextureBuffer());
-        chkLargePixmapCache->setEnabled(cfg.useOpenGL());
-        chkLargePixmapCache->setChecked(
-            cfg.readEntry("needsPixmapCacheWorkaround", KisOpenGL::needsPixmapCacheWorkaround()));
+        cmbAssistantsDrawMode->setEnabled(cfg.useOpenGL());
+        cmbAssistantsDrawMode->setCurrentIndex(assistantDrawModeToIndex(cfg.assistantsDrawMode()));
         cmbFilterMode->setEnabled(cfg.useOpenGL());
         cmbFilterMode->setCurrentIndex(cfg.openGLFilteringMode());
         // Don't show the high quality filtering mode if it's not available
@@ -1888,7 +1905,7 @@ void DisplaySettingsTab::setDefault()
         grpOpenGL->setEnabled(false);
         grpOpenGL->setChecked(false);
         chkUseTextureBuffer->setEnabled(false);
-        chkLargePixmapCache->setEnabled(false);
+        cmbAssistantsDrawMode->setEnabled(false);
         cmbFilterMode->setEnabled(false);
     }
     else {
@@ -1896,9 +1913,8 @@ void DisplaySettingsTab::setDefault()
         grpOpenGL->setChecked(cfg.useOpenGL(true));
         chkUseTextureBuffer->setChecked(cfg.useOpenGLTextureBuffer(true));
         chkUseTextureBuffer->setEnabled(true);
-        chkLargePixmapCache->setEnabled(true);
-        chkLargePixmapCache->setChecked(
-            cfg.readEntry("needsPixmapCacheWorkaround", KisOpenGL::needsPixmapCacheWorkaround()));
+        cmbAssistantsDrawMode->setEnabled(true);
+        cmbAssistantsDrawMode->setCurrentIndex(assistantDrawModeToIndex(cfg.assistantsDrawMode(true)));
         cmbFilterMode->setEnabled(true);
         cmbFilterMode->setCurrentIndex(cfg.openGLFilteringMode(true));
     }
@@ -1944,7 +1960,7 @@ void DisplaySettingsTab::slotUseOpenGLToggled(bool isChecked)
 {
     chkUseTextureBuffer->setEnabled(isChecked);
     cmbFilterMode->setEnabled(isChecked);
-    chkLargePixmapCache->setEnabled(isChecked);
+    cmbAssistantsDrawMode->setEnabled(isChecked);
 }
 
 void DisplaySettingsTab::slotPreferredSurfaceFormatChanged(int index)
@@ -2434,7 +2450,7 @@ bool KisDlgPreferences::editPreferences()
         cfg.setUseOpenGLTextureBuffer(m_displaySettings->chkUseTextureBuffer->isChecked());
         cfg.setOpenGLFilteringMode(m_displaySettings->cmbFilterMode->currentIndex());
         cfg.setRootSurfaceFormat(&kritarc, indexToFormat(m_displaySettings->cmbPreferedRootSurfaceFormat->currentIndex()));
-        cfg.writeEntry("needsPixmapCacheWorkaround", m_displaySettings->chkLargePixmapCache->isChecked());
+        cfg.setAssistantsDrawMode(indexToAssistantDrawMode(m_displaySettings->cmbAssistantsDrawMode->currentIndex()));
 
         cfg.setCheckSize(m_displaySettings->intCheckSize->value());
         cfg.setScrollingCheckers(m_displaySettings->chkMoving->isChecked());
