libs/ui/kis_painting_assistants_decoration.cpp
@@ -42,6 +42,7 @@ struct KisPaintingAssistantsDecoration::Private {
     bool outlineVisible;
     bool snapOnlyOneAssistant;
     bool snapEraser;
+    bool useCache;
     KisPaintingAssistantSP firstAssistant;
     KisPaintingAssistantSP selectedAssistant;
     bool aFirstStroke;
@@ -77,6 +78,8 @@ KisPaintingAssistantsDecoration::KisPaintingAssistantsDecoration(QPointer<KisVie
     setPriority(95);
     d->snapOnlyOneAssistant = true; //turn on by default.
     d->snapEraser = false;
+
+    slotConfigChanged(); // load the initial config
 }
 
 KisPaintingAssistantsDecoration::~KisPaintingAssistantsDecoration()
@@ -91,6 +94,16 @@ void KisPaintingAssistantsDecoration::slotUpdateDecorationVisibility()
     if (visible() != shouldBeVisible) {
         setVisible(shouldBeVisible);
     }
+}
+
+void KisPaintingAssistantsDecoration::slotConfigChanged()
+{
+    KisConfig cfg(true);
+    const KisConfig::AssistantsDrawMode drawMode = cfg.assistantsDrawMode();
+
+    d->useCache =
+        (drawMode == KisConfig::ASSISTANTS_DRAW_MODE_PIXMAP_CACHE) ||
+        (drawMode == KisConfig::ASSISTANTS_DRAW_MODE_LARGE_PIXMAP_CACHE);
 }
 
 void KisPaintingAssistantsDecoration::addAssistant(KisPaintingAssistantSP assistant)
@@ -328,7 +341,7 @@ void KisPaintingAssistantsDecoration::endStroke()
     }
 }
 
-void KisPaintingAssistantsDecoration::drawDecoration(QPainter& gc, const QRectF& updateRect, const KisCoordinatesConverter *converter,KisCanvas2* canvas)
+void KisPaintingAssistantsDecoration::drawDecoration(QPainter& gc, const QRectF& updateRect, const KisCoordinatesConverter *converter, KisCanvas2* canvas)
 {
     if(assistants().isEmpty()) {
         return; // no assistants to worry about, ok to exit
@@ -353,7 +366,7 @@ void KisPaintingAssistantsDecoration::drawDecoration(QPainter& gc, const QRectF&
         kritaProxy->supportsPaintingAssistants();
 
     Q_FOREACH (KisPaintingAssistantSP assistant, assistants()) {
-        assistant->drawAssistant(gc, updateRect, converter, true, canvas, assistantVisibility(), outlineVisible);
+        assistant->drawAssistant(gc, updateRect, converter, d->useCache, canvas, assistantVisibility(), outlineVisible);
 
         if (isEditingAssistants()) {
             drawHandles(assistant, gc, converter);
